--- a/index.html
+++ b/index.html
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Data Receiver</title>
+    <base target="_top">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>individual plan</title>
 </head>
 <body>
-
-<h2>Submit Your Data</h2>
-
-<form action="submit_data.php" method="post">
-  <label for="name">Name:</label><br>
-  <input type="text" id="name" name="name" required><br>
-  <label for="email">Email:</label><br>
-  <input type="email" id="email" name="email" required><br>
-  <label for="message">Message:</label><br>
-  <textarea id="message" name="message" rows="4" required></textarea><br><br>
-  <input type="submit" value="Submit">
-</form>
-
+    <iframe style="width: 100%; height: 100vh;" scrolling="yes" src="https://script.google.com/macros/s/AKfycbzn0ASUlkoR5RXD7n8_Csr7sBKvQI2qG8zwyuEhtoqI8Ty-2bxX06z5Pl_EFIUee8sI/exec" frameborder="0"></iframe>
 </body>
 </html>
